bk_ida/gccida/c2/copy_rtx_if_shared
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3022:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)orig->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3036:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v10 = rtx_alloc( ( rtx_code)( unsigned __int16)v1); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3036:31: error: expected expression
v10 = rtx_alloc( ( rtx_code)( unsigned __int16)v1); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3087:18: error: expected expression
v28 = *( _OWORD *)&rtwint[2 * v26 + 6]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3087:10: error: use of undeclared identifier '_OWORD'
v28 = *( _OWORD *)&rtwint[2 * v26 + 6]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3088:55: error: invalid operands to binary expression ('struct rtvec_def' and 'unsigned int')
*(  struct rtvec_def *)rtvec[v26 / 2].elem = *( rtvec)&rtwint[2 * v26 + 2]; 
                                             ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3089:12: error: expected expression
*( _OWORD *)rtvec[v26 / 2 + 1].elem = v28; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3089:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)rtvec[v26 / 2 + 1].elem = v28; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3090:18: error: expected expression
v29 = *( _OWORD *)&rtwint[2 * v26 + 14]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3090:10: error: use of undeclared identifier '_OWORD'
v29 = *( _OWORD *)&rtwint[2 * v26 + 14]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3091:59: error: invalid operands to binary expression ('struct rtvec_def' and 'unsigned int')
*(  struct rtvec_def *)rtvec[v26 / 2 + 2].elem = *( rtvec)&rtwint[2 * v26 + 10]; 
                                                 ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3092:12: error: expected expression
*( _OWORD *)rtvec[v26 / 2 + 3].elem = v29; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3092:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)rtvec[v26 / 2 + 3].elem = v29; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3093:18: error: expected expression
v30 = *( _OWORD *)&rtwint[2 * v26 + 22]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3093:10: error: use of undeclared identifier '_OWORD'
v30 = *( _OWORD *)&rtwint[2 * v26 + 22]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3094:59: error: invalid operands to binary expression ('struct rtvec_def' and 'unsigned int')
*(  struct rtvec_def *)rtvec[v26 / 2 + 4].elem = *( rtvec)&rtwint[2 * v26 + 18]; 
                                                 ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3095:12: error: expected expression
*( _OWORD *)rtvec[v26 / 2 + 5].elem = v30; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3095:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)rtvec[v26 / 2 + 5].elem = v30; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/emit-rtl.c:3096:18: error: expected expression
v31 = *( _OWORD *)&rtwint[2 * v26 + 30]; 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_rtx_if_shared/src/obj/emit-rtl.o] Error 1
